@@ -11,9 +11,9 @@ static str fixup_ip;
 
 static const char* linkproto;
 static const char* local_host;
-static const char* local_ip;
+static str local_ip;
 static const char* remote_host;
-static const char* remote_ip;
+static str remote_ip;
 
 static const char* date_string(void)
 {
@@ -25,10 +25,12 @@ static const char* date_string(void)
 }
 
 static int str_catfromby(str* s, const char* helo_domain,
-			 const char* host, const char* ip)
+			 const char* host, const str* ip)
 {
+  if (ip->len == 0)
+    ip = 0;
   if (helo_domain == 0)
-    helo_domain = (host != 0) ? host : (ip != 0) ? ip : UNKNOWN;
+    helo_domain = (host != 0) ? host : (ip != 0) ? ip->s : UNKNOWN;
   if (!str_cats(s, helo_domain)) return 0;
   if (host != 0 || ip != 0) {
     if (!str_cats(s, " (")) return 0;
@@ -39,7 +41,7 @@ static int str_catfromby(str* s, const char* helo_domain,
     }
     if (ip != 0)
       if (!str_catc(s, '[') ||
-	  !str_cats(s, ip) ||
+	  !str_cat(s, ip) ||
 	  !str_catc(s, ']'))
 	return 0;
     if (!str_catc(s, ')')) return 0;
@@ -50,13 +52,13 @@ static int str_catfromby(str* s, const char* helo_domain,
 static int fixup_received(str* s)
 {
   if (local_host &&
-      local_ip &&
+      local_ip.len > 0 &&
       fixup_host.len > 0 &&
       fixup_ip.len > 0 &&
       (strcasecmp(local_host, fixup_host.s) != 0 ||
-       strcasecmp(local_ip, fixup_ip.s) != 0)) {
+       strcasecmp(local_ip.s, fixup_ip.s) != 0)) {
     if (!str_cat3s(s, "Received: from ", local_host, " (")) return 0;
-    if (!str_cat4s(s, local_host, " [", local_ip, "])\n"
+    if (!str_cat4s(s, local_host, " [", local_ip.s, "])\n"
 		   "  by ")) return 0;
     if (!str_cat(s, &fixup_host)) return 0;
     if (!str_cats(s, " ([")) return 0;
@@ -80,10 +82,10 @@ static int build_received(str* s)
 {
   if (!str_cats(s, "Received: from ")) return 0;
   if (!str_catfromby(s, session_getstr("helo_domain"),
-		     remote_host, remote_ip))
+		     remote_host, &remote_ip))
     return 0;
   if (!str_cats(s, "\n  by ")) return 0;
-  if (!str_catfromby(s, local_host, 0, local_ip)) return 0;
+  if (!str_catfromby(s, local_host, 0, &local_ip)) return 0;
   if (!str_cat4s(s, "\n  with ", session_protocol(),
 		 " via ", linkproto))
     return 0;
@@ -91,13 +93,27 @@ static int build_received(str* s)
   return 1;
 }
 
+static int str_copyip(str* s, const char* ip, int is_ipv6)
+{
+  s->len = 0;
+  if (ip != 0) {
+    if (is_ipv6
+	&& !str_copys(s, "IPv6:"))
+      return 0;
+    return str_cats(s, ip);
+  }
+  return 1;
+}
+
 static const response* init(void)
 {
   const char* tmp;
+  int is_ipv6;
 
   linkproto = getprotoenv(0);
-  local_ip = getprotoenv("LOCALIP");
-  remote_ip = getprotoenv("REMOTEIP");
+  is_ipv6 = linkproto != 0 && strcasecmp(linkproto, "TCP6") == 0;
+  if (!str_copyip(&local_ip, getprotoenv("LOCALIP"), is_ipv6)) return &resp_oom;
+  if (!str_copyip(&remote_ip, getprotoenv("REMOTEIP"), is_ipv6)) return &resp_oom;
   local_host = getprotoenv("LOCALHOST");
   remote_host = getprotoenv("REMOTEHOST");
 
